[package]
name = "durt"
description = "Generate dart code based on a rust ffishim"
keywords = ["dart", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
authors = ["Louis Feuvrier <louisf@uber.com>"]
repository = "https://github.com/mqnfred/durt"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
cargo_toml = "^0"
# TODO: switch to crates.io version
clap = { git = "https://github.com/clap-rs/clap/" }
darling = "^0"
ffishim = { path = "../../ffishim/ffishim" }
indoc = "^0"
heck = "^0"
once_cell = "^1"
syn = "^1"
