[package]
name = "strings"
version = "0.1.0"
authors = ["Louis Feuvrier <mqnfred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffishim = "0.1.1"
ffishim_derive = "0.1.1"

[lib]
name = "strings"
crate-type = ["cdylib"]
